# RendererVulkanPS1

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: notes.md
src/: Application.cpp  Application.hpp  defines.hpp
src/core/: Logger.cpp  Logger.hpp  assert.hpp
src/platform/: Window.cpp  Window.hpp
